--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <header>
     <div class="logo">NEBULITH</div>
     <nav>
-      <a href="/juegos.html">Juegos</a>
-      <a href="/noticias.html">Noticias</a>
-      <a href="/contacto.html">Contacto</a>
+      <a href="./juegos.html">Juegos</a>
+      <a href="./noticias.html">Noticias</a>
+      <a href="./contacto.html">Contacto</a>
     </nav>
   </header>
   <section class="hero">
