--- a/juegos.html
+++ b/juegos.html
@@ -11,10 +11,10 @@
 <header>
   <div class="logo">NEBULITH</div>
   <nav>
-    <a href="index.html">Inicio</a>
-    <a href="juegos.html">Juegos</a>
-    <a href="noticias.html">Noticias</a>
-    <a href="contacto.html">Contacto</a>
+    <a href="./index.html">Inicio</a>
+    <a href="./juegos.html">Juegos</a>
+    <a href="./noticias.html">Noticias</a>
+    <a href="./contacto.html">Contacto</a>
   </nav>
 </header>
 
